# Kest

./: Kest.cabal  Kest.lhs  README.md  RecursiveCompression.lhs  StringUtils.lhs
Documentation/: README  bibliography.bib  kest_documentation.tex
